--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CP1-WEB/DEV</title>
+	<title>Meu programa</title>
+	<style>
+		body {
+			background-color: lightblue;
+		}
+		h1 {
+			color: white;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-    <h1>início do Programa</h1>
-    <script src="./script.js"></script>
+	<h1>Meu programa</h1>
+
+	<script src="programa.js"></script>
 </body>
 </html>
